--- a/css/index.html
+++ b/css/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog pessoal de Tanise Souza de Salles</title>
-    <link href="https://tanisesalles.github.io/Trilha-na-floresta/styles.css" hel="stylesheet"/> 
+    <link href="https://tanisesalles.github.io/Trilha-na-floresta/styles.css"/> 
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
